# 2025b__Excel_Handler

./: .gitignore  README.md  excel_handler.py  excel_handler_o1pro.py  file1.xlsx  file2.xlsx  nlpcc_2025_week2_livecoding.ipynb  pyproject.toml  requirements.txt
excel_handler/: __init__.py
excel_handler/gemini/: __init__.py  excel_handler_gemini.py
excel_handler/o1pro/: __init__.py  excel_handler_o1pro.py
output_20250407_013148/: comparison_summary.txt  file1_contents.txt  file2_contents.txt
